--- a/apps/web/src/styles/projectForm.module.scss
+++ b/apps/web/src/styles/projectForm.module.scss
@@ -9,19 +9,19 @@
 }
 
 .backButton {
-  padding: 15px 80px 10px 0px;
+  padding: 15px 40px 10px 0px;
 }
 
 .textContent {
-  padding: 15px 10px 10px 40px;
+  padding: 15px 10px 10px 20px;
 }
 .content {
   font-size: 0.7rem;
 }
 
 .inputFieldMain {
-  padding: 0px 30px 0px 50px;
-  width: 92%;
+  padding: 0px 0px 0px 20px;
+  width: 96%;
   height: 50%;
 }
 .inputFields {
@@ -34,7 +34,7 @@
 .siteHeading {
   display: flex;
   justify-content: flex-start;
-  padding: 0px 0px 0px 24px;
+  padding: 0px 0px 0px 30px;
 }
 
 .submitButton {
@@ -60,7 +60,7 @@
   color: #ffffff;
 }
 .tableContainer {
-  padding: 10px 25px 15px 25px;
+  padding: 10px 30px 15px 30px;
   display: flex;
   flex-direction: column;
   gap: 5px;
@@ -125,22 +125,28 @@ td {
 }
 
 .selectedProjectName {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-content: center;
+  // display: flex;
+  // flex-direction: row;
+  // justify-content: center;
+  // align-content: center;
 }
 
 .projectCode {
   font-size: smaller;
   color: #1d5d9b;
 }
+
+.tableHeadingSite {
+  width: 20%;
+  text-align: center;
+}
 .siteField {
   display: flex;
   align-items: center;
   padding: 20px 0px 0px 0px;
   height: 35px;
-  width: 150%;
+  width: 130%;
+  // background-color: red;
 }
 
 .address {
@@ -166,36 +172,36 @@ td {
 
 .buttonContent {
   display: flex;
-  padding: 10px;
-  justify-content: flex-end
+  padding: 10px 0px 10px 10px;
+  justify-content: flex-end;
 }
 
-.documentContainer{
-  padding: 10px 0px 0px 20px;
+.documentContainer {
+  padding: 10px 0px 0px 30px;
 }
-.documentOuterLayer{
+.documentOuterLayer {
   width: 40%;
   border: 1px dashed #475467;
   border-radius: 5px;
 }
 
-.documentContent{
+.documentContent {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   padding: 20px;
 }
-.documentSpan{
+.documentSpan {
   font-size: 0.65rem;
 }
-.viewFiles{
+.viewFiles {
   padding: 0px 0px 0px 50px;
 }
-.listStyles{
+.listStyles {
   font-size: 0.85rem;
 }
 
-.errorStyles{
+.errorStyles {
   color: red;
   font-size: 0.75rem;
 }
