--- a/apps/web/src/styles/projectForm.module.scss
+++ b/apps/web/src/styles/projectForm.module.scss
@@ -30,10 +30,10 @@
   flex-direction: column;
 }
 
-.clientadd {
+.instantAdd {
   color: cadetblue;
   font-weight: lighter;
-  font-size: small;
+  font-size: x-small;
   display: flex;
   flex-direction: row;
   align-self: flex-end;
@@ -41,7 +41,7 @@
 }
 
 .addtext {
-  padding-top: 4px;
+  padding-top: 2px;
 }
 
 .siteHeading {
