--- a/apps/web/src/styles/customSwitch.module.scss
+++ b/apps/web/src/styles/customSwitch.module.scss
@@ -36,3 +36,22 @@
   margin: 0 8px;
   color: #fff;
 }
+
+.box {
+  position: relative;
+}
+
+.box::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #ccc;
+  position: absolute;
+  bottom: 20;
+  left: 10;
+}
+
+.box:last-child::after {
+  display: none;
+}
