--- a/apps/web/src/styles/expanses.module.scss
+++ b/apps/web/src/styles/expanses.module.scss
@@ -46,8 +46,11 @@
 .table_container {
   padding: 10px;
   width: 100%;
+  height: 100%;
   overflow-x: auto;
+  // overflow-y: auto;
   max-width: 1200px; /* Adjust the maximum width as needed */
+  // max-height: 250px;
   margin: 0 auto;
   &::-webkit-scrollbar {
     width: 0px;
@@ -58,6 +61,7 @@
 .scrollable_table {
   width: 100%;
   border-collapse: collapse;
+  height: 100%;
 
   th,
   td {
@@ -67,13 +71,12 @@
     font-size: 11px;
   }
   thead {
-    background-color: aqua;
     tr {
-      background-color: beige;
       th {
         background-color: #f2f2f2;
         text-transform: uppercase;
         margin-top: 10px;
+        position: fixed;
       }
     }
   }
