Category sub category and sub sub category add and edit created

--- a/apps/web/src/styles/subCategoryList.module.scss
+++ b/apps/web/src/styles/subCategoryList.module.scss
@@ -30,6 +30,14 @@
   position: relative;
 }
 
+.top {
+  padding: 0px 20px 0px 0px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: first baseline;
+}
+
 .box::after {
   content: '';
   display: block;
