--- a/apps/web/src/styles/subSubCategoryList.module.scss
+++ b/apps/web/src/styles/subSubCategoryList.module.scss
@@ -65,6 +65,14 @@
   position: relative;
 }
 
+.top {
+  padding: 0px 20px 0px 0px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: first baseline;
+}
+
 .box::after {
   content: '';
   display: block;
@@ -87,14 +95,15 @@
   gap: 8px;
   color: #6941c6;
 }
-.resetButton {
-  // padding: 12px 20px 12px 20px;
+.resetButton [disabled]{
+  padding: 12px 20px 12px 20px;
   border-radius: 8px;
   border: 1px;
   gap: 8px;
   color: #848289;
+  background-color: #ccc;
 }
-.resetButton:hover {
+.resetButton:not([disabled]):hover {
   background-color: #c4c4c6;
   color: #ffffff;
 }
@@ -163,7 +172,7 @@ tr:hover {
   padding: 10px 10px 1px 2op;
 }
 .dividerStyle {
-  border-bottom: 1px solid #ccc;
+  border-bottom: 2px solid #ccc;
   padding: 5px 1px 5px 1px;
 }
 .header {
