--- a/apps/web/src/styles/categoryList.module.scss
+++ b/apps/web/src/styles/categoryList.module.scss
@@ -51,9 +51,17 @@
 .projectField {
   margin-bottom: 20px;
 }
+.top {
+  padding: 0px 20px 0px 0px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: first baseline;
+}
 
 .box {
   position: relative;
+
 }
 
 .box::after {
@@ -158,7 +166,7 @@ tr:hover {
   padding: 10px 10px 1px 2op;
 }
 .dividerStyle {
-  border-bottom: 1px solid #ccc;
+  border-bottom: 2px solid #ccc;
   padding: 5px 1px 5px 1px;
 }
 .header {
