--- a/apps/web/src/styles/userList.module.scss
+++ b/apps/web/src/styles/userList.module.scss
@@ -54,6 +54,9 @@
 .buttonStyle {
   padding-left: 15px;
 }
+.addButton {
+  padding-top: 20px;
+}
 .content {
   font-size: 0.7rem;
 }
@@ -121,14 +124,15 @@ tr:hover {
   background-color: #7f56d9;
   color: #ffffff;
 }
-.resetButton {
+.resetButton [disabled]{
   padding: 12px 20px 12px 20px;
   border-radius: 8px;
   border: 1px;
   gap: 8px;
-  color: #848289;
+  color: black;
+  background-color: #ccc;
 }
-.resetButton:hover {
+.resetButton:not([disabled]):hover {
   background-color: #c4c4c6;
   color: #ffffff;
 }
