--- a/apps/web/src/styles/userList.module.scss
+++ b/apps/web/src/styles/userList.module.scss
@@ -173,12 +173,11 @@ tr:hover {
 .field {
   padding: 5px 20px 5px 20px;
 }
-.popupHeader {
+.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 16px;
-  border-bottom: 1px solid #e0e0e0;
 }
 
 .closeButton {
