--- a/apps/web/src/styles/userList.module.scss
+++ b/apps/web/src/styles/userList.module.scss
@@ -3,6 +3,7 @@
   justify-content: flex-end;
   padding: 5px;
 }
+
 .tableContainer {
   padding: 10px;
   // height: 100vh;
@@ -10,6 +11,7 @@
   flex-direction: column;
   gap: 20px;
 }
+
 .fields {
   padding: 10px;
   display: flex;
@@ -17,10 +19,12 @@
   flex-direction: row;
   flex-wrap: wrap;
 }
-.container{
-    width: 100%;
-    height: 100vh;
+
+.container {
+  width: 100%;
+  height: 100vh;
 }
+
 .box {
   position: relative;
 }
@@ -39,27 +43,34 @@
 .box:last-child::after {
   display: none;
 }
+
 .textContent {
   padding: 10px 10px 0px 10px;
 }
+
 .text {
   padding: 10px 10px 0px 10px;
   display: flex;
   gap: 79%;
 }
+
 .textStyle {
   padding-left: 5px;
   padding-top: 5px;
 }
+
 .buttonStyle {
   padding-left: 15px;
 }
+
 .addButton {
   padding-top: 20px;
 }
+
 .content {
   font-size: 0.7rem;
 }
+
 .groupButton {
   padding-top: 10px;
   padding-right: 10px;
@@ -92,6 +103,7 @@ td {
   display: flex;
   flex-direction: row;
   column-gap: 15px;
+  cursor: pointer;
 }
 
 tr:nth-child(even) {
@@ -101,6 +113,7 @@ tr:nth-child(even) {
 tr:hover {
   background-color: #e0e0e0;
 }
+
 .searchField {
   padding: 10px 10px 0px 10px;
   display: flex;
@@ -108,11 +121,13 @@ tr:hover {
   justify-content: space-between;
   gap: 10px;
 }
+
 .searchButton {
   display: flex;
   flex-direction: row;
   flex-shrink: initial;
 }
+
 .searchButton {
   padding: 12px 20px 12px 20px;
   border-radius: 8px;
@@ -120,11 +135,13 @@ tr:hover {
   gap: 8px;
   color: #6941c6;
 }
+
 .searchButton:hover {
   background-color: #7f56d9;
   color: #ffffff;
 }
-.resetButton [disabled]{
+
+.resetButton [disabled] {
   padding: 12px 20px 12px 20px;
   border-radius: 8px;
   border: 1px;
@@ -132,6 +149,7 @@ tr:hover {
   color: black;
   background-color: #ccc;
 }
+
 .resetButton:not([disabled]):hover {
   background-color: #c4c4c6;
   color: #ffffff;
@@ -141,30 +159,36 @@ tr:hover {
   display: flex;
   gap: 10px;
 }
+
 .pagination {
   display: flex;
   justify-content: end;
 }
+
 .formContainer {
   width: 350px;
   // padding: 1px 20px 10px 20px;
   display: flex;
   flex-direction: column;
 }
+
 .formButton {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
   gap: 10px;
-  padding:10px 20px 10px 0px ;
+  padding: 10px 20px 10px 0px;
 }
+
 .cancelButton:hover {
   background-color: #c4c4c6;
   color: #070707;
 }
+
 .titleStyle {
   padding: 10px 10px 1px 2op;
 }
+
 .dividerStyle {
   border-bottom: 1px solid #ccc;
   padding: 5px 1px 0px 1px;
@@ -173,6 +197,7 @@ tr:hover {
 .field {
   padding: 5px 20px 5px 20px;
 }
+
 .header {
   display: flex;
   justify-content: space-between;
