--- a/apps/web/src/styles/userList.module.scss
+++ b/apps/web/src/styles/userList.module.scss
@@ -219,6 +219,11 @@ tr:hover {
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   width: 350px;
 }
+.popupHeader {
+  display: flex;
+  flex-direction: row;
+  gap: 200px;
+}
 
 .button {
   display: flex;
