--- a/apps/web/src/styles/expanses.module.scss
+++ b/apps/web/src/styles/expanses.module.scss
@@ -111,3 +111,10 @@
   // font-size: 15px;
   padding-bottom: '20px';
 }
+
+.top {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-right: 10px;
+}
