--- a/apps/web/src/styles/leadTender.module.scss
+++ b/apps/web/src/styles/leadTender.module.scss
@@ -11,8 +11,8 @@
 }
 .content {
   font-family: Inter;
-  font-size: 16px;
-  font-weight: 400;
+  font-size: 10px;
+  font-weight: bold;
   line-height: 24px;
   letter-spacing: 0em;
   text-align: left;
@@ -29,6 +29,13 @@
 .box {
   position: relative;
   padding-bottom: 10px;
+}
+.box1 {
+  position: relative;
+  padding-bottom: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .box::after {
