--- a/apps/web/src/styles/bom.module.scss
+++ b/apps/web/src/styles/bom.module.scss
@@ -60,3 +60,18 @@
   padding: 10px;
   margin-top: 5px;
 }
+
+.mainHeading{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.mainLeftContent{
+  width:55%
+}
+
+.descriptionContent{
+  text-align:justify;
+  display: block;
+}
