--- a/apps/web/src/styles/bom.module.scss
+++ b/apps/web/src/styles/bom.module.scss
@@ -7,6 +7,10 @@
   justify-content: space-between;
   padding-bottom: 10px;
 }
+// .abstractAdd{
+//   width:100%;
+//   // background-color: red;
+// }
 .subcontainer {
   display: flex;
   flex-direction: row;
