--- a/apps/web/src/styles/listItem.module.scss
+++ b/apps/web/src/styles/listItem.module.scss
@@ -3,7 +3,6 @@
   margin: 2%;
   display: flex;
   flex-direction: column;
-  gap: 30px;
 }
 .topContent{
   display: flex;
@@ -27,21 +26,45 @@ display: flex;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 24px;
-
 }
 .middleRightContent{
   display: flex;
   align-items: center;
   gap: 20px;
 }
-.resetButton h2{
-  font-size: 14px;
-  font-weight: 'bolder';
-  color: #585454;
+.searchField {
+  padding: 15px 10px 0px 0px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
-.resetButton{
-  cursor: pointer;
+.searchButton {
+  display: flex;
+  flex-direction: row;
+  flex-shrink: initial;
+}
+.searchButton {
+  padding: 12px 20px 12px 20px;
+  border-radius: 8px;
+  border: 1px;
+  gap: 8px;
+  color: #6941c6;
+}
+.searchButton:hover {
+  background-color: #7f56d9;
+  color: #ffffff;
+}
+.resetButton [disabled]{
+  padding: 12px 20px 12px 20px;
+  border-radius: 8px;
+  border: 1px;
+  gap: 8px;
+  color: #848289;
+  background-color: #ccc;
+}
+.resetButton:not([disabled]):hover {
+  background-color: #c4c4c6;
+  color: #ffffff;
 }
 
 
@@ -50,7 +73,6 @@ table {
   width: 100%;
   border: 1px solid #ccc;
 }
-
 
 th {
   background-color: #f2f2f2;
@@ -66,11 +88,27 @@ td {
   padding: 8px;
 }
 
+.tablerow {
+  display: flex;
+  flex-direction: row;
+  column-gap: 15px;
+  cursor: pointer;
+}
+
 tr:nth-child(even) {
   background-color: #f2f2f2;
 }
 
-
 tr:hover {
   background-color: #e0e0e0;
+}
+.pagination {
+  display: flex;
+  justify-content: end;
+  padding-top: 10px;
+}
+.groupButton{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
 }
