--- a/apps/web/src/styles/bom.module.scss
+++ b/apps/web/src/styles/bom.module.scss
@@ -26,7 +26,7 @@
 }
 .mainContainer {
   // background-color: rgb(243, 243, 243);
-  background-color: lavenderblush;
+  background-color: rgb(255, 242, 242);
   width: 80%;
   padding: 5px;
   border-radius: 5px;
@@ -126,5 +126,5 @@
 .taskButton{
   display: flex;
   justify-content: flex-end;
-  padding:5px 10px 0px 0px;
+  padding:5px 5px 0px 0px;
 }
