--- a/apps/web/src/styles/bom.module.scss
+++ b/apps/web/src/styles/bom.module.scss
@@ -50,7 +50,7 @@
   background-color: #d0d5dd;
   padding: 8px;
   color: #667085;
-  width:80%
+  width: 80%;
 }
 .primarylistContent {
   display: flex;
@@ -64,7 +64,7 @@
   margin-top: 5px;
 }
 
-.mainHeading{
+.mainHeading {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -73,18 +73,18 @@
   // justify-content: space-around;
 }
 
-.mainLeftContent{
-  width:55%;
+.mainLeftContent {
+  width: 55%;
 }
 
-.descriptionContent{
-  text-align:justify;
+.descriptionContent {
+  text-align: justify;
   display: block;
   font-size: small;
 }
 
-.descriptionContentOne{
-  text-align:justify;
+.descriptionContentOne {
+  text-align: justify;
   display: block;
   font-size: small;
 }
@@ -112,19 +112,65 @@
   gap: 10px;
 }
 
-.topSideMenu{
+.topSideMenu {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   gap: 3px;
 }
-.topSideHeading{
+.topSideHeading {
   font-weight: lighter;
   font-size: 0.8rem;
 }
-.taskButton{
+.taskButton {
   display: flex;
   justify-content: flex-end;
-  padding:5px 10px 0px 0px;
+  padding: 5px 10px 0px 0px;
+}
+
+.tableContainer {
+  padding: 10px;
+  width: 100%;
+  height: 100%;
+  // overflow-x: auto;
+  // overflow-y: auto;
+  max-width: 950px; /* Adjust the maximum width as needed */
+  max-height: 250px;
+  margin: 0 auto;
+  &::-webkit-scrollbar {
+    width: 0px;
+    background: transparent;
+  }
+}
+.scrollable_table {
+  width: 100%;
+  border-collapse: collapse;
+  height: 100%;
+
+  th,
+  td {
+    border: 1px solid #000000;
+    text-align: left;
+    font-weight: 600;
+    font-size: 11px;
+  }
+  thead {
+    tr {
+      th {
+        background-color: #f2f2f2;
+        text-transform: uppercase;
+        margin-top: 10px;
+      }
+    }
+  }
+
+  td {
+    align-items: center;
+    text-align: center;
+  }
+  td:hover,
+  tr:hover {
+    background-color: rgb(239, 239, 239);
+  }
 }
