--- a/apps/web/src/styles/customaddabstract.module.scss
+++ b/apps/web/src/styles/customaddabstract.module.scss
@@ -29,4 +29,11 @@
     background-color: #c4c4c6;
     color: #070707;
   }
+
+  .dateField {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 10px;
+  }
   
