--- a/apps/web/src/styles/bom.module.scss
+++ b/apps/web/src/styles/bom.module.scss
@@ -174,3 +174,12 @@
     background-color: rgb(239, 239, 239);
   }
 }
+.Secondcontainer{
+  height: 100vh;
+}
+
+.abstractButton{
+  display: flex;
+  justify-content: center;
+  margin-top: 230px;
+}
