--- a/apps/web/src/styles/bom.module.scss
+++ b/apps/web/src/styles/bom.module.scss
@@ -132,11 +132,11 @@
 .tableContainer {
   padding: 10px;
   width: 100%;
-  height: 100%;
+  // height: 100%;
   // overflow-x: auto;
-  // overflow-y: auto;
+  // overflow-y: none;
   max-width: 950px; /* Adjust the maximum width as needed */
-  max-height: 250px;
+  // max-height: 550px;
   margin: 0 auto;
   &::-webkit-scrollbar {
     width: 0px;
@@ -173,4 +173,28 @@
   tr:hover {
     background-color: rgb(239, 239, 239);
   }
+}
+
+.saveButton {
+  display: flex;
+  justify-content: end;
+  padding-right: 10px;
+}
+.totalPanel {
+  display: flex;
+  justify-content: flex-end;
+  background-color: #ccc;
+  padding: 10px;
+}
+.panelList {
+  display: flex;
+  flex-direction: column;
+  // justify-content: flex-end;
+}
+
+.groupButton {
+  display: flex;
+  margin-top: 1%;
+  justify-content: flex-end;
+  padding-right: 10px;
 }
