--- a/apps/web/src/styles/bom.module.scss
+++ b/apps/web/src/styles/bom.module.scss
@@ -135,7 +135,7 @@
   // height: 100%;
   // overflow-x: auto;
   // overflow-y: none;
-  max-width: 1050px; /* Adjust the maximum width as needed */
+  max-width: 1150px; /* Adjust the maximum width as needed */
   // max-height: 550px;
   margin: 0 auto;
   &::-webkit-scrollbar {
@@ -187,9 +187,20 @@
   padding: 10px;
 }
 .panelList {
+  width: 20%;
+  padding: 10px;
+}
+.panel {
   display: flex;
-  flex-direction: column;
-  // justify-content: flex-end;
+  justify-content: space-between;
+  padding: 10px;
+  text-align: right;
+  align-items: end;
+}
+.panelTitle {
+  text-align: right;
+  align-items: end;
+  color: rgb(0, 0, 0);
 }
 
 .groupButton {
@@ -206,4 +217,20 @@
   display: flex;
   justify-content: center;
   margin-top: 230px;
+}
+
+.bomcontainer {
+  padding: 10px 10px 10px 10px;
+  height: 100%;
+}
+
+.mainheader {
+  height: 30%;
+  background-color: #0042d2;
+}
+.mainBody {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding-bottom: 10px;
 }
