--- a/apps/web/src/styles/bomList.module.scss
+++ b/apps/web/src/styles/bomList.module.scss
@@ -44,19 +44,19 @@
     padding: 7px;
 }
 
-.scrollContainer{
-    height: 400px; 
-    overflow-y: auto;
-}
+// .scrollContainer{
+//     height: 400px; 
+//     overflow-y: auto;
+// }
 
-.scrollContainer::-webkit-scrollbar {
-    width: 0.5em;
-  }
+// .scrollContainer::-webkit-scrollbar {
+//     width: 0.5em;
+//   }
   
-  .scrollContainer::-webkit-scrollbar-thumb {
-    background-color: transparent; /* Color of the thumb (bar itself) */
-  }
+//   .scrollContainer::-webkit-scrollbar-thumb {
+//     background-color: transparent; 
+//   }
   
-  .sscrollContainer::-webkit-scrollbar-track {
-    background-color: transparent; /* Color of the track (background behind thumb) */
-  }
+//   .sscrollContainer::-webkit-scrollbar-track {
+//     background-color: transparent; 
+//   }
