--- a/apps/web/src/styles/bom.module.scss
+++ b/apps/web/src/styles/bom.module.scss
@@ -1,6 +1,6 @@
 .container {
   padding: 10px 10px 10px 10px;
-  height: 100%;
+  height: 100vh;
 }
 .subHeader {
   display: flex;
@@ -15,7 +15,7 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   gap: 10px;
 }
 .submenu {
