--- a/apps/web/src/styles/bom.module.scss
+++ b/apps/web/src/styles/bom.module.scss
@@ -97,19 +97,16 @@
   flex-direction: column;
   cursor: pointer;
   font-weight: normal;
-  border-radius: 0px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0.1, 0.1);
+  // box-shadow: 0px 4px 8px rgba(0, 0, 0.1, 0.1);
   z-index: 100;
   background-color: white;
 }
-.menuItem:hover {
-  background-color: #ddd;
-}
+
 .menuItem {
   display: flex;
   flex-direction: column;
-  padding: 5px;
-  gap: 10px;
+  // padding: 5px;
+  // gap: 10px;
 }
 
 .topSideMenu {
@@ -173,4 +170,14 @@
   tr:hover {
     background-color: rgb(239, 239, 239);
   }
+}
+
+.options{
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.options:hover {
+  background-color: #ddd;
 }
