bom expandable table

--- a/apps/web/src/styles/bomList.module.scss
+++ b/apps/web/src/styles/bomList.module.scss
@@ -44,6 +44,11 @@
     padding: 7px;
 }
 
+.groupButton{
+    display: flex;
+    justify-content: flex-end;
+}
+
 // .scrollContainer{
 //     height: 400px; 
 //     overflow-y: auto;
