--- a/apps/web/src/styles/bomList.module.scss
+++ b/apps/web/src/styles/bomList.module.scss
@@ -33,8 +33,13 @@
   display: flex;
   flex-direction: row;
   cursor: pointer;
-  padding: 5px 0px 0px 5px;
-  width:7%;
+  padding: 5px 0px 0px 0px;
+  width:8%;
+  gap: 3px;
+}
+.options {
+  display: flex;
+  flex-direction: row;
 }
 .addText{
     padding-top: 2px;
