--- a/apps/web/src/styles/bom.module.scss
+++ b/apps/web/src/styles/bom.module.scss
@@ -172,7 +172,7 @@
   }
 }
 
-.options{
+.options {
   display: flex;
   align-items: center;
   gap: 5px;
@@ -232,7 +232,7 @@
 
 .mainheader {
   height: 30%;
-  background-color: #0042d2;
+  // background-color: #0042d2;
 }
 .mainBody {
   display: flex;
