--- a/apps/web/src/styles/project.module.scss
+++ b/apps/web/src/styles/project.module.scss
@@ -1,7 +1,51 @@
 .Container {
   width: 100%;
-  padding-top: 10px;
   padding-bottom: 10px;
+}
+.Container_main {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.mainBody {
+  padding: 10px;
+}
+.groupButton {
+  width: 50%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: end;
+}
+.box {
+  position: relative;
+}
+
+.box::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #ccc;
+  position: absolute;
+  bottom: 20;
+  left: 10;
+}
+
+.box:last-child::after {
+  display: none;
+}
+.mainTextContent {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+}
+.textContent_1 {
+  width: 50%;
+}
+.textContent {
+  padding: 15px 10px 10px 20px;
+}
+.content {
+  font-size: 0.7rem;
 }
 .inputFieldMain {
   //   padding: 0px 0px 0px 20px;
@@ -45,4 +89,66 @@
   background-color: #dcdcdc;
   color: #848289;
   cursor: not-allowed;
+}
+
+.tableContainer {
+  padding: 10px;
+  width: 100%;
+  // height: 100%;
+  // overflow-x: auto;
+  // overflow-y: none;
+  max-width: 1150px; /* Adjust the maximum width as needed */
+  // max-height: 550px;
+  margin: 0 auto;
+  &::-webkit-scrollbar {
+    width: 0px;
+    background: transparent;
+  }
+}
+
+.scrollable_table {
+  width: 100%;
+  border-collapse: collapse;
+  height: 100%;
+
+  th,
+  td {
+    border: 1px solid #000000;
+    text-align: left;
+    font-weight: 600;
+    font-size: 11px;
+  }
+  thead {
+    tr {
+      th {
+        background-color: #f2f2f2;
+        text-transform: uppercase;
+        margin-top: 10px;
+      }
+    }
+  }
+
+  td {
+    align-items: center;
+    text-align: center;
+  }
+  td:hover,
+  tr:hover {
+    background-color: rgb(239, 239, 239);
+  }
+}
+.buttonContent {
+  padding-top: 10px;
+  display: flex;
+  justify-content: flex-end;
+}
+.addPlan {
+  color: #7f56d9;
+  font-weight: lighter;
+  font-size: x-small;
+  cursor: pointer;
+}
+.addPlan:hover {
+  background-color: #ffffff;
+  box-shadow: 0 2px 4px rgba(196, 114, 212, 0.2);
 }
