--- a/apps/web/src/styles/labourList.module.scss
+++ b/apps/web/src/styles/labourList.module.scss
@@ -5,17 +5,18 @@
 }
 .tableContainer {
 
-  padding: 10px;
+  padding: 15px;
   // height: 100vh;
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
 
-.container {
-  width: 100%;
-  height: 100vh;
-}
+// .container {
+//   width: 100%;
+//   height: 100vh;
+// }
+
 .textContent {
   padding: 10px 0px 1px 20px;
 }
@@ -35,7 +36,7 @@
   flex-wrap: wrap;
 }
 .searchField {
-  padding: 0px 10px 0px 20px;
+  padding: 5px 15px 0px 20px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -58,13 +59,12 @@
   margin-bottom: 20px;
 }
 .top {
-  padding: 10px 10px 0px 10px;
+  padding: 10px 15px 0px 10px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: first baseline;
-
-  
+  gap: 10px;
 } 
 
 .box {
@@ -117,6 +117,7 @@ tr:hover {
 .pagination {
   display: flex;
   justify-content: end;
+
 }
 
 .inputFilter {
