--- a/apps/web/src/styles/vendor.module.scss
+++ b/apps/web/src/styles/vendor.module.scss
@@ -1,111 +1,134 @@
 .box {
-    padding: 15px 0px 5px 10px;
+  padding: 15px 0px 5px 10px;
 }
 
 .box1 {
-    padding: 15px 0px 25px 30px;
+  padding: 15px 0px 25px 30px;
 }
 
 .dividerStyle {
-    border-bottom: 1px solid #ccc;
-    padding: 1px 1px 5px 1px;
+  border-bottom: 1px solid #ccc;
+  padding: 1px 1px 5px 1px;
 }
 
 .form {
-    justify-content: center;
+  justify-content: center;
 }
 
 .fieldRow {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    padding-bottom: 20px;
-    gap: 150px;
-}
-.buttonFields{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    gap: 20px;
-    padding: 0px 100px 30px 0px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 15%;
+  flex-wrap: wrap;
 }
 
+.fieldRowLast {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    padding: 0px 20px 0px 40px;
+  }
 
-// Vendor List>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+.buttonFields {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  gap: 20px;
+  padding: 0px 100px 30px 0px;
+}
+
 .container {
-    width: 100%;
-    height: 100vh;
+  width: 98%;
+  padding: 5px 0px 5px 5px;
 }
+.inputFieldMain {
+    padding: 0px 0px 0px 20px;
+    width: 96%;
+    height: 50%;
+  }
 
 .text {
-    padding: 10px 10px 0px 10px;
-    display: flex;
-    gap: 79%;
+  padding: 10px 10px 0px 10px;
+  display: flex;
+  gap: 79%;
 }
 
 .textStyle {
-    padding-left: 5px;
-    padding-top: 5px;
+  padding-left: 5px;
+  padding-top: 5px;
 }
 
 .searchField {
-    padding: 10px 10px 0px 10px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 10px;
+  padding: 10px 10px 0px 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 10px;
 }
 
 .searchButton {
-    display: flex;
-    flex-direction: row;
-    flex-shrink: initial;
+  display: flex;
+  flex-direction: row;
+  flex-shrink: initial;
 }
 
 .searchButton {
-    padding: 12px 20px 12px 20px;
-    border-radius: 8px;
-    border: 1px;
-    gap: 8px;
-    color: #6941c6;
+  padding: 12px 20px 12px 20px;
+  border-radius: 8px;
+  border: 1px;
+  gap: 8px;
+  color: #6941c6;
 }
 
 .searchButton:hover {
-    background-color: #7f56d9;
-    color: #ffffff;
+  background-color: #7f56d9;
+  color: #ffffff;
 }
 
 .resetButton [disabled] {
-    padding: 12px 20px 12px 20px;
-    border-radius: 8px;
-    border: 1px;
-    gap: 8px;
-    color: black;
-    background-color: #ccc;
+  padding: 12px 20px 12px 20px;
+  border-radius: 8px;
+  border: 1px;
+  gap: 8px;
+  color: black;
+  background-color: #ccc;
 }
 
 .resetButton:not([disabled]):hover {
-    background-color: #c4c4c6;
-    color: #ffffff;
+  background-color: #c4c4c6;
+  color: #ffffff;
 }
 
 .inputFilter {
-    display: flex;
-    gap: 10px;
+  display: flex;
+  gap: 10px;
 }
 
 .button {
-    display: flex;
-    gap: 20px;
+  display: flex;
+  gap: 20px;
 }
 .dividerStyle {
-    border-bottom: 1px solid #ccc;
-    padding: 1px 1px 5px 1px;
+  border-bottom: 1px solid #ccc;
+  padding: 1px 1px 5px 1px;
 }
 
 .tableContainer {
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.tablerow {
+  display: flex;
+  flex-direction: row;
+  column-gap: 15px;
+  cursor: pointer;
+}
+
+.pagination {
+  display: flex;
+  justify-content: end;
 }
