--- a/apps/web/src/styles/projectlist.module.scss
+++ b/apps/web/src/styles/projectlist.module.scss
@@ -98,3 +98,9 @@ tr:hover {
   flex-direction: column;
   gap: 20px;
 }
+.dashBoardcontainer{
+  padding: 10px 10px 10px 10px;
+}
+.dashBoard {
+  height: 300px;
+}
