--- a/apps/web/src/styles/projectSettings.module.scss
+++ b/apps/web/src/styles/projectSettings.module.scss
@@ -1,6 +1,5 @@
 .conatiner {
     width: 100%;
-    //   height: 100vh;
     padding-top: 10px;
     padding-bottom: 10px;
   }
@@ -143,4 +142,60 @@
   
   .fieldStyle {
     width: 18%;
+  }
+
+  .profileDetail {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+  }
+  .profileContents {
+    
+    display: flex;
+    text-align: left;
+    flex-direction: column;
+    gap: 1px;
+  }
+  .profileName {
+    align-items: center;
+  }
+  
+  .emailContent{
+   font-size:x-small
+  }
+
+  .scrollable_table {
+    width: 100%;
+    border-collapse: collapse;
+    height: 100%;
+  
+    th,
+    td {
+      border: 1px solid #000000;
+      text-align: center;
+      font-weight: 600;
+      font-size: 11px;
+    }
+    thead {
+      tr {
+        th {
+          background-color: #f2f2f2;
+          text-transform: uppercase;
+          margin-top: 10px;
+        }
+      }
+    }
+  
+    td {
+      align-items: center;
+      text-align: center;
+    }
+    td:hover,
+    tr:hover {
+      background-color: rgb(239, 239, 239);
+    }
+  }
+
+  .tableHeading{
+    align-items: center;
   }
