--- a/apps/web/src/styles/vendorView.module.scss
+++ b/apps/web/src/styles/vendorView.module.scss
@@ -5,8 +5,7 @@
     justify-content: space-between;
 }
 .cardContent{
-    padding: 10px 10px 10px 10px;
-    // width:65%;
+    padding: 15px 15px 15px 15px;
 }
 .dataRows {
     display: flex;
@@ -16,9 +15,10 @@
 .leftData{
     font-weight: bold;
     width: 20%;
+    // margin-left: 10px;
 }
 .rightData{
-    margin-left: 25%;
+    margin-left: 20%;
 }
 .dividerStyle {
     border-bottom: 1px solid black;
