--- a/apps/web/src/styles/addItem.module.scss
+++ b/apps/web/src/styles/addItem.module.scss
@@ -21,12 +21,14 @@ border-bottom: 1px solid black;
 .itemField {
   display: flex;
   flex-direction:column;
+  flex-wrap: wrap;
   justify-content: space-around;
   gap: 10px;
 }
 .itemField1 {
   display: flex;
   flex-direction:row;
+  flex-wrap: wrap;
   justify-content: space-around;
 }
 
