--- a/apps/web/src/styles/indentList.module.scss
+++ b/apps/web/src/styles/indentList.module.scss
@@ -22,6 +22,7 @@
 .inputFilter {
     display: flex;
     gap: 10px;
+    flex-direction: row;
   }
   .searchButton {
     padding: 12px 20px 12px 20px;
@@ -45,4 +46,47 @@
   .resetButton:not([disabled]):hover {
     background-color: #c4c4c6;
     color: #ffffff;
+  }
+  .dividerStyle {
+    border-bottom: 1px solid #ccc;
+  }
+  
+table {
+    border-collapse: collapse;
+    width: 100%;
+    border: 1px solid #ccc;
+  }
+  th {
+    background-color: #f2f2f2;
+    padding: 8px;
+  } 
+  tr {
+    border-bottom: 1px solid #ccc;
+  }
+  td {
+    padding: 8px;
+  }
+  .tablerow {
+    display: flex;
+    flex-direction: row;
+    column-gap: 15px;
+    cursor: pointer;
+  }
+  tr:nth-child(even) {
+    background-color: #f2f2f2;
+  }
+  tr:hover {
+    background-color: #e0e0e0;
+  }
+  .tableContainer {
+    padding: 10px 10px 0px 30px;
+    // height: 100vh;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .pagination {
+    padding: 10px 10px 10px 0px;
+    display: flex;
+    justify-content: end;
   }
