--- a/apps/web/src/styles/project.module.scss
+++ b/apps/web/src/styles/project.module.scss
@@ -221,8 +221,16 @@
 .inputFilter {
   display: flex;
   gap: 10px;
+  width: 100%;
+  align-items: center;
 }
-
+.filterSelect {
+  width: 30%;
+}
+.filterButton {
+  display: flex;
+  gap: 20px;
+}
 .searchButton {
   padding: 12px 20px 12px 20px;
   border-radius: 8px;
@@ -245,4 +253,10 @@
 .resetButton:not([disabled]):hover {
   background-color: #c4c4c6;
   color: #ffffff;
+}
+
+.pagination {
+  padding-top: 10px;
+  display: flex;
+  justify-content: end;
 }
