--- a/apps/web/src/styles/dropdown.module.scss
+++ b/apps/web/src/styles/dropdown.module.scss
@@ -1,6 +1,7 @@
 
 .dropdown {
   position: relative;
+
 }
 
 .dropdownButton {
@@ -21,11 +22,14 @@
   list-style: none;
   background-color: #f0f0f0;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
 }
 
 .dropdown.open .dropdownMenu {
-  display: flex;
+  display:block;
   z-index: 1;
-
-  padding: 0.5rem 2rem;
+  padding: 0.5rem .5rem;
+  overflow: scroll;
 }
+
+
