--- a/apps/web/src/styles/navbar.module.scss
+++ b/apps/web/src/styles/navbar.module.scss
@@ -102,6 +102,7 @@
 .dropdownContainer {
   display: flex;
   gap: 1rem;
+
 }
 .dropdowntitle {
   display: flex;
@@ -146,39 +147,40 @@
   display: flex;
   gap: 10px;
   width: max-content;
+
+
 }
 .dropDownContainer p{
   font-size: 14px;
   color: #7F56D9;
 }
-.dropDwonContent{
+.dropDownContent{
   display: flex;
   flex-direction: column;
-  max-width: 290px;
+  max-width: 250px;
   padding:16px;
-gap: 10px;
+  gap: 10px;
+
 }
 .itemsTitle{
   display: flex;
   align-items: center;
   gap: 5px;
 }
+.dropDownItems{
+  width: 100%;
+}
 .dropDownItems p{
   font-size:12px;
   color: #475467;
-  padding: 2px 32px;
+  padding: 2px
 }
 .itemsTitle h2{
 font-size: 14px;
 }
 .menu {
   list-style: none;
-  // width: 73px;
-  // padding-top: 5px;
   margin-top: 15px;
-  // padding-left: 10px;
-  // padding-right: 18px;
-  // padding-bottom: 10px;
   position:absolute;
   z-index: 1500;
   gap: 10px;
@@ -201,5 +203,18 @@ font-size: 14px;
   flex-direction: row;
   padding: 5px;
   gap: 10px;
-} 
+}
 
+
+@media (max-width: 1350px) {
+  .container{
+    flex-direction: column;
+  }
+  .dropDownContent{
+    padding:8px;
+
+  }
+  .dropDownItems p{
+  display: none;
+  }
+}
