--- a/apps/web/src/styles/purchaseRequestView.module.scss
+++ b/apps/web/src/styles/purchaseRequestView.module.scss
@@ -12,6 +12,7 @@
   }
   .textContent {
     padding-top: 10px;
+    width: 55%;
   }
   .content {
     font-size: 0.8rem;
@@ -28,6 +29,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
   }
   
 table {
@@ -58,18 +60,48 @@ table {
     background-color: #e0e0e0;
   }
   .tableContainer {
-    padding: 12px 12px 0px 12px;
-    // height: 100vh;
+    padding: 12px 40px 0px 40px;
     display: flex;
     flex-direction: column;
     gap: 20px;
   }
-  .pagination {
-    padding: 10px 10px 10px 0px;
+  .quatationStyle{
     display: flex;
-    justify-content: end;
+    flex-direction: row;
+    justify-content: flex-end;
+    gap: 5px;
   }
 
  
+  .approveButtons{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    gap: 10px;
+    padding:10px 10px 0px 0px
+  }
+  .searchButton {
+    padding: 12px 20px 12px 20px;
+    border-radius: 8px;
+    border: 1px;
+    gap: 8px;
+    color: #6941c6;
+  }
+  .searchButton:hover {
+    background-color: #7f56d9;
+    color: #ffffff;
+  }
+  .resetButton [disabled]{
+    padding: 12px 20px 12px 20px;
+    border-radius: 8px;
+    border: 1px;
+    gap: 8px;
+    color: #848289;
+    background-color: #ccc;
+  }
+  .resetButton:not([disabled]):hover {
+    background-color: #c4c4c6;
+    color: #ffffff;
+  }
 
  
