--- a/apps/web/src/styles/vendorSelect.module.scss
+++ b/apps/web/src/styles/vendorSelect.module.scss
@@ -56,3 +56,9 @@ tr:hover {
     background-color: #e0e0e0;
 }
 
+.button {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
