--- a/apps/web/src/styles/vendorSelect.module.scss
+++ b/apps/web/src/styles/vendorSelect.module.scss
@@ -62,3 +62,34 @@ tr:hover {
     justify-content: flex-end;
 }
 
+.customMenu {
+    position: relative;
+    display: inline-block;
+}
+
+.menuText {
+    cursor: pointer;
+    color: blue;
+}
+
+.menuDropdown {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    z-index: 1;
+}
+
+.menuDropdown div {
+    padding: 8px 12px;
+    cursor: pointer;
+    white-space: nowrap;
+}
+
+.menuDropdown div:hover {
+    background-color: #f0f0f0;
+}
