purchase module integration

--- a/apps/web/src/styles/vendorSelect.module.scss
+++ b/apps/web/src/styles/vendorSelect.module.scss
@@ -6,8 +6,8 @@
     font-size: 0.7rem;
 }
 
-.content {
-    font-size: 0.7rem;
+.textContent {
+    padding: 10px;
 }
 
 .dividerStyle {
@@ -65,14 +65,13 @@ tr:hover {
 .customMenu {
     position: relative;
     display: inline-block;
-}
-
-.menuText {
-    cursor: pointer;
+  }
+  
+  .menuText {
     color: blue;
-}
-
-.menuDropdown {
+  }
+  
+  .menuDropdown {
     position: absolute;
     top: 100%;
     left: 0;
@@ -82,14 +81,59 @@ tr:hover {
     border: 1px solid #ccc;
     border-radius: 4px;
     z-index: 1;
-}
-
-.menuDropdown div {
+  }
+  
+  .menuDropdown div {
     padding: 8px 12px;
-    cursor: pointer;
     white-space: nowrap;
-}
-
-.menuDropdown div:hover {
+  }
+  
+  .menuDropdown .disabled {
+    cursor: not-allowed;
+    color: #999;
+  }
+  
+  .menuDropdown div:not(.disabled):hover {
     background-color: #f0f0f0;
-}
+    cursor: pointer;
+    color: blue;
+  }
+
+//   .customMenu {
+//     position: relative;
+//     display: inline-block;
+//   }
+  
+//   .menuText {
+//     color: blue;
+//   }
+  
+//   .menuDropdown {
+//     position: absolute;
+//     top: 100%;
+//     left: 0;
+//     display: flex;
+//     flex-direction: column;
+//     background-color: white;
+//     border: 1px solid #ccc;
+//     border-radius: 4px;
+//     z-index: 1;
+//   }
+  
+//   .menuDropdown div {
+//     padding: 8px 12px;
+//     white-space: nowrap;
+//     cursor: pointer; 
+//   }
+  
+//   .menuDropdown .disabled {
+//     cursor: not-allowed;
+//     color: #999; 
+//     pointer-events: none; 
+//   }
+  
+//   .menuDropdown div:not(.disabled):hover {
+//     background-color: #f0f0f0;
+//   }
+  
+  
