--- a/apps/web/src/styles/purchaseView.module.scss
+++ b/apps/web/src/styles/purchaseView.module.scss
@@ -13,12 +13,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-bottom: 10px;
+    padding: 10px;
 }
 
-.content {
-    font-size: 0.7rem;
-}
 
 .backButton {
     padding: 0px 10px 0px 0px
