--- a/apps/web/src/styles/vendorSelect.module.scss
+++ b/apps/web/src/styles/vendorSelect.module.scss
@@ -62,39 +62,46 @@ tr:hover {
     justify-content: flex-end;
 }
 
+//***************Custom Menu component SCSS***************//
+
 .customMenu {
     position: relative;
     display: inline-block;
-}
 
-.menuText {
-    color: blue;
-}
+    .menuText {
+        color: blue;
+    }
 
-.menuDropdown {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    z-index: 1;
-}
+    .menuDropdown {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        display: flex;
+        flex-direction: column;
+        background-color: white;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        z-index: 1;
 
-.menuDropdown div {
-    padding: 8px 12px;
-    white-space: nowrap;
-    cursor: pointer; 
-}
+        div {
+            padding: 8px 12px;
+            white-space: nowrap;
+            cursor: pointer;
 
-.menuDropdown div:disabled:hover {
-    cursor: not-allowed;
-    color: #999;
-}
+            &.disabled {
+                cursor: not-allowed;
+                color: #999;
 
-.menuDropdown div:not(.disabled):hover {
-    background-color: #f0f0f0;
-    color: blue;
+                &:hover {
+                    background-color: inherit;
+                    color: #999;
+                }
+            }
+
+            &:not(.disabled):hover {
+                background-color: #f0f0f0;
+                color: blue;
+            }
+        }
+    }
 }
