--- a/apps/web/src/styles/purchaseRequestView.module.scss
+++ b/apps/web/src/styles/purchaseRequestView.module.scss
@@ -104,4 +104,8 @@ table {
     color: #ffffff;
   }
 
- 
+  .pagination {
+    padding: 0px 40px 10px 0px;
+    display: flex;
+    justify-content: end;
+  }
