--- a/apps/web/src/styles/purchaseRequestView.module.scss
+++ b/apps/web/src/styles/purchaseRequestView.module.scss
@@ -1,26 +1,60 @@
 .container {
-    width: 100%;
-  }
-  .box {
-    position: relative;
-  }
-  .headingTop{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0px 25px 10px 25px;
-  }
-  .textContent {
-    padding-top: 10px;
-    width: 55%;
-  }
-  .content {
-    font-size: 0.8rem;
-  }
-.rightContent{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+  width: 100%;
+}
+
+.box {
+  position: relative;
+}
+
+.textContent {
+  padding-left: 10px;
+  padding-top: 10px;
+}
+
+.content {
+  font-size: 0.7rem;
+}
+
+.searchField {
+  padding: 10px 10px 0px 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.inputFilter {
+  display: flex;
+  gap: 10px;
+  flex-direction: row;
+  height: 45px;
+}
+
+.searchButton {
+  padding: 12px 20px 12px 20px;
+  border-radius: 8px;
+  border: 1px;
+  gap: 8px;
+  color: #6941c6;
+}
+
+.searchButton:hover {
+  background-color: #7f56d9;
+  color: #ffffff;
+}
+
+.resetButton [disabled] {
+  padding: 12px 20px 12px 20px;
+  border-radius: 8px;
+  border: 1px;
+  gap: 8px;
+  color: #848289;
+  background-color: #ccc;
+}
+
+.resetButton:not([disabled]):hover {
+  background-color: #c4c4c6;
+  color: #ffffff;
 }
 
 .dividerStyle {
