--- a/apps/web/src/styles/leadTender.module.scss
+++ b/apps/web/src/styles/leadTender.module.scss
@@ -7,7 +7,7 @@
 .textContent {
   display: flex;
   flex-direction: column;
-  padding-bottom: 10px;
+  // padding-bottom: 10px;
 }
 .content {
   font-family: Inter;
@@ -137,7 +137,7 @@ tr:hover {
 }
 
 .searchField {
-  padding: 10px 10px 0px 0px;
+  padding: 0px 10px 0px 0px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -146,6 +146,7 @@ tr:hover {
 .inputFilter {
   display: flex;
   gap: 10px;
+  height: 45px;
 }
 .searchButton {
   padding: 12px 20px 12px 20px;
