--- a/apps/web/src/styles/login.module.scss
+++ b/apps/web/src/styles/login.module.scss
@@ -13,7 +13,6 @@
   display: flex;
   flex-direction: column;
   gap: 50px;
-  // justify-content: space-between;
 }
 
 .titlediv {
@@ -113,6 +112,7 @@
 
 .loginButton {
   text-align: center;
+  padding-top: 3px;
 }
 
 .ssoButtons {
