--- a/apps/web/src/styles/navbar.module.scss
+++ b/apps/web/src/styles/navbar.module.scss
@@ -34,13 +34,18 @@
   padding: 5px;
 }
 
-.rightIcons {
+.rightSearch {
   display: flex;
   align-items: center;
   gap: 10px;
   padding: 0 24px;
 }
-
+.rightIcons{
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+  // background-color: lawngreen;
+}
 .sequencesRow {
   display: flex;
   align-items: center;
