--- a/apps/web/src/styles/project.module.scss
+++ b/apps/web/src/styles/project.module.scss
@@ -46,6 +46,7 @@
 }
 .content {
   font-size: 0.7rem;
+  padding-bottom: 5px;
 }
 .inputFieldMain {
   //   padding: 0px 0px 0px 20px;
@@ -66,7 +67,7 @@
   font-size: x-small;
   display: flex;
   flex-direction: row;
-  align-self: flex-end;
+  justify-content: flex-end;
   cursor: pointer;
 }
 .submitButton {
@@ -114,7 +115,7 @@
   th,
   td {
     border: 1px solid #000000;
-    text-align: left;
+    text-align: center;
     font-weight: 600;
     font-size: 11px;
   }
@@ -136,6 +137,9 @@
   tr:hover {
     background-color: rgb(239, 239, 239);
   }
+}
+.tableHeading{
+  align-items: center;
 }
 .buttonContent {
   padding-top: 10px;
@@ -191,6 +195,7 @@
 .headingContent {
   display: flex;
   justify-content: space-between;
+  // background-color: #475467 ;
 }
 .indent_container {
   padding: 10px;
@@ -212,7 +217,7 @@
   align-items: end;
 }
 .searchField {
-  padding: 0px 5px 0px 5px;
+  padding: 5px 5px 0px 5px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
