--- a/apps/web/src/styles/dropdown.module.scss
+++ b/apps/web/src/styles/dropdown.module.scss
@@ -2,6 +2,7 @@
 .dropdown {
   position: relative;
 
+
 }
 
 .dropdownButton {
@@ -20,8 +21,10 @@
   padding: 0;
   margin: 0;
   list-style: none;
-  background-color: #f0f0f0;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: #ffffff;
+  // box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border-radius: 5px;
 
 }
 
@@ -29,7 +32,7 @@
   display:block;
   z-index: 1;
   padding: 0.5rem .5rem;
-  overflow: scroll;
+
 }
 
 
