--- a/apps/web/src/styles/bom.module.scss
+++ b/apps/web/src/styles/bom.module.scss
@@ -23,14 +23,14 @@
   gap: 10px;
 }
 .submenu {
-  background-color: rgb(228, 226, 226);
+  background-color: rgb(241, 241, 241);
   width: 20%;
   padding: 5px;
   border-radius: 5px;
 }
 .mainContainer {
   // background-color: rgb(243, 243, 243);
-  background-color: rgb(255, 242, 242);
+  background-color: rgb(255, 255, 255);
   width: 80%;
   padding: 5px;
   border-radius: 5px;
@@ -72,13 +72,15 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  background-color: lavender;
+  background-color: rgb(255, 255, 255);
   padding: 10px;
+
   // justify-content: space-around;
 }
 
 .mainLeftContent {
   width: 45%;
+  font-weight: 100 !important;
 }
 
 .descriptionContent {
