--- a/apps/web/src/styles/project.module.scss
+++ b/apps/web/src/styles/project.module.scss
@@ -133,8 +133,8 @@
   }
 
   td {
-    align-items: center;
-    text-align: center;
+    // align-items: center;
+    // text-align: center;
   }
   td:hover,
   tr:hover {
