--- a/apps/web/src/styles/expanses.module.scss
+++ b/apps/web/src/styles/expanses.module.scss
@@ -125,3 +125,43 @@
   align-items: center;
   gap: 20px;
 }
+
+.documentContainer {
+  padding: 10px 0px 0px 30px;
+  display: flex;
+  flex-direction: row;
+  // justify-content: space-between;
+  gap: 20px;
+  align-items: center;
+}
+.documentOuterLayer {
+  // width: 40%;
+  border: 1px dashed #475467;
+  border-radius: 5px;
+}
+
+.documentContent {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 20px;
+}
+.documentSpan {
+  font-size: 0.65rem;
+}
+.viewFiles {
+  padding: 0px 0px 0px 50px;
+}
+.listStyles {
+  font-size: 0.85rem;
+}
+
+.errorStyles {
+  color: red;
+  font-size: 0.75rem;
+}
+
+.headingContent {
+  display: flex;
+  justify-content: space-between;
+}
